# NetworkingExperiment

./: .gitignore  CMakeLists.txt  README.MD  parse.py  proxy.py  requirements.txt
Base64/: CMakeLists.txt
Base64/inc/: Base64.h
Base64/src/: Base64.c
BasicSmtp/: CMakeLists.txt
BasicSmtp/inc/: BasicSmtp.h  BasicTcp.h  Email.h
BasicSmtp/src/: BasicSmtp.cpp  BasicTcp.cpp  Email.cpp
Post/: CMakeLists.txt
Post/inc/: EscSeq.h
Post/src/: main.cpp
Test/: CMakeLists.txt
Test/src/: main.cpp
