CMAKE_MINIMUM_REQUIRED(VERSION 3.13)
CMAKE_POLICY(SET CMP0079 NEW)
CMAKE_POLICY(SET CMP0048 NEW)
PROJECT(MailProxy VERSION 0.2.0)
ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
INCLUDE_DIRECTORIES(INTERFACE BasicSmtp/inc Base64/inc Post/inc)
ADD_SUBDIRECTORY(Base64)
ADD_SUBDIRECTORY(BasicSmtp)
ADD_SUBDIRECTORY(Test)
ADD_SUBDIRECTORY(Post)
TARGET_LINK_LIBRARIES(Test Base64 BasicSmtp)
TARGET_LINK_LIBRARIES(Post Base64 BasicSmtp)
